AM_CPPFLAGS = -I../src
LIBADD = -L../src -lcitrus-options

noinst_PROGRAMS = \
    simple defaults listing program

simple_SOURCES = simple.cpp
simple_LDADD = ../src/libcitrus-options.la

defaults_SOURCES = defaults.cpp
defaults_LDADD = ../src/libcitrus-options.la

listing_SOURCES = listing.cpp
listing_LDADD = ../src/libcitrus-options.la

program_SOURCES = program.cpp
program_LDADD = ../src/libcitrus-options.la
